# btc-network

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  audit.toml  deny.toml  docker-compose.yml
.claude/: ecc-tools.json  identity.json
.claude/rules/: architecture.md  commands.md  protocol.md
.codex/: config.toml
.githooks/: commit-msg
.github/: pull_request_template.md
.github/workflows/: ci.yml  cicd.yml  deploy-web-pages.yml
apps/api/: Cargo.toml  Dockerfile  README.md
apps/api/src/: config.rs  lib.rs  main.rs  routes.rs
apps/api/src/docs/: agents.md  config.rs  mod.rs
apps/api/src/handlers/: mod.rs  node_status.rs
apps/api/src/handlers/historical/: asns.rs  mod.rs
apps/api/src/handlers/historical/runs/: detail.rs  list.rs  mod.rs
apps/api/src/handlers/last_run/: asn_organizations.rs  asns.rs  countries.rs  mod.rs  network_types.rs  nodes.rs  protocol_versions.rs  services.rs  start_heights.rs  sybil_metrics.rs  user_agents.rs
apps/api/tests/: mod.rs
apps/api/tests/common/: mod.rs
apps/api/tests/docs_routes/: mod.rs
apps/api/tests/fixtures/historical_asns/basic/: expected.json  node_observations.csv
apps/api/tests/fixtures/historical_run_detail/basic/: crawler_run_checkpoints.csv  expected.json  node_observations.csv
apps/api/tests/fixtures/historical_run_detail/invalid_uuid/: expected.json
apps/api/tests/fixtures/historical_run_detail/not_found/: expected.json
apps/api/tests/fixtures/historical_runs/basic/: crawler_run_checkpoints.csv  expected.json
apps/api/tests/fixtures/historical_runs/limit_too_high/: expected.json
apps/api/tests/fixtures/historical_runs/limit_zero/: expected.json
apps/api/tests/fixtures/last_run_asns/basic/: crawler_run_checkpoints.csv  expected.json  node_observations.csv
apps/api/tests/fixtures/last_run_distributions/basic/: asn_organizations.expected.json  countries.expected.json  countries_any_phase.expected.json  crawler_run_checkpoints.csv  network_types.expected.json  node_observations.csv  protocol_versions.expected.json  services.expected.json  start_heights.expected.json  user_agents.expected.json
apps/api/tests/fixtures/last_run_nodes/basic/: crawler_run_checkpoints.csv  expected.json  node_observations.csv
apps/api/tests/fixtures/last_run_nodes/limit_too_high/: expected.json
apps/api/tests/fixtures/last_run_sybil_metrics/basic/: crawler_run_checkpoints.csv  expected.json  node_observations.csv  phase_any.expected.json
apps/api/tests/handlers/: historical_asns.rs  historical_run_detail.rs  historical_runs.rs  last_run_asns.rs  last_run_distributions.rs  last_run_nodes.rs  last_run_sybil_metrics.rs  limit_guardrails.rs  mod.rs  node_status.rs
apps/cli/: Cargo.toml
apps/clickhouse-migrate/: Cargo.toml
apps/crawler/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
apps/crawler/src/: main.rs
apps/desktop/: README.md  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: default.toml
apps/desktop/src-tauri/permissions/autogenerated/: download_block.toml  get_block_summary.toml  get_last_block_height.toml  get_peer_addresses.toml  handshake.toml  ping.toml
apps/desktop/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  models.rs  validation.rs
apps/listener/: Cargo.toml
apps/postgres-migrate/: Cargo.toml
apps/postgres-migrate/src/: main.rs
apps/tor/: Dockerfile  torrc
apps/web/: README.md  components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  (+1 more)
compose/: api.yml  crawler.yml  postgres-migrate.yml  postgres.yml  tor.yml
config/: status-targets.toml
crates/btc-network/: Cargo.toml
crates/btc-network-clickhouse/: Cargo.toml  README.md
crates/btc-network-clickhouse/migrations/: 0001_create_node_observations.sql  0002_create_crawler_run_checkpoints.sql
crates/btc-network-clickhouse/src/: config.rs  lib.rs  migrations.rs  repository.rs  rows.rs
crates/btc-network-clickhouse/src/migrations/: bundled.rs  mod.rs  model.rs  runner.rs  tests.rs
crates/btc-network-clickhouse/src/repository/: analytics.rs  mod.rs  runs.rs  tests.rs  writes.rs
crates/btc-network-clickhouse/src/rows/: analytics.rs  checkpoints.rs  mod.rs  observations.rs  tests.rs
crates/btc-network-clickhouse/tests/: clickhouse_repository.rs
crates/btc-network-postgres/: Cargo.toml  README.md
crates/btc-network-postgres/migrations/: 20260404000100_create_node_observations.sql  20260404000200_create_crawler_run_checkpoints.sql  20260405000100_create_crawler_run_recovery_points.sql  20260426000100_create_unreachable_nodes.sql  20260502000100_create_node_status.sql  20260505000100_add_node_observation_id.sql
crates/btc-network-postgres/src/: config.rs  lib.rs  values.rs
crates/btc-network-postgres/src/migrations/: bundled.rs  mod.rs  model.rs  runner.rs
crates/btc-network-postgres/src/repository/: analytics.rs  mod.rs  runs.rs  status.rs  unreachable.rs  writes.rs
crates/btc-network-postgres/tests/: postgres_repository.rs
crates/btc-network-testkit/: Cargo.toml
crates/btc-network-testkit/src/: lib.rs
crates/btc-network/src/: lib.rs  observability.rs  status.rs
crates/btc-network/src/app/: peer.rs
crates/btc-network/src/client/: mod.rs  peer.rs
crates/btc-network/src/crawler/: analytics.rs  domain.rs  lifecycle.rs  mod.rs  node.rs  ports.rs  types.rs  worker.rs
crates/btc-network/src/session/: mod.rs
crates/btc-network/src/wire/: codec.rs  constants.rs  decode.rs  message.rs  mod.rs  payload.rs
docs/: README.md  architecture-decisions.md  deployment.md  frontend-architecture.md  fundamentals.md  observability.md
infra/: README.md
scripts/: README.md  crawler_timing.sh  crawler_timing_summary.jq  new-clickhouse-migration.sh  new-postgres-migration.sh  security_summary.sh  test_summary.sh  update-crawler-mmdb.sh  validate-semantic-subject.sh
src/: lib.rs  main.rs  session.rs  wire.rs
(+207 files in other folders)
