[workspace]
members = [
    "apps/api",
    "apps/cli",
    "apps/clickhouse-migrate",
    "apps/postgres-migrate",
    "apps/crawler",
    "apps/listener",
    "apps/desktop/src-tauri",
    "crates/btc-network",
    "crates/btc-network-clickhouse",
    "crates/btc-network-postgres",
    "crates/btc-network-mmdb",
    "crates/btc-network-observability",
]
default-members = [
    "apps/api",
    "apps/cli",
    "apps/clickhouse-migrate",
    "apps/postgres-migrate",
    "apps/crawler",
    "apps/listener",
    "apps/desktop/src-tauri",
    "crates/btc-network",
    "crates/btc-network-clickhouse",
    "crates/btc-network-postgres",
    "crates/btc-network-mmdb",
    "crates/btc-network-observability",
]
resolver = "3"
