[package]
name = "btc-network-api"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
axum = "0.8"
btc-network = { path = "../../crates/btc-network", features = ["openapi"] }
btc-network-observability = { path = "../../crates/btc-network-observability" }
btc-network-postgres = { path = "../../crates/btc-network-postgres" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "timeout"] }
tracing = "0.1"
url = "2"
utoipa = { version = "5", features = ["macros"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }

[dev-dependencies]
btc-network-testkit = { path = "../../crates/btc-network-testkit" }
chrono = "0.4.44"
tower = { version = "0.5", features = ["util"] }
serde_json = "1"
