[package]
name = "btc-network-crawler"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
btc-network = { path = "../../crates/btc-network" }
btc-network-clickhouse = { path = "../../crates/btc-network-clickhouse" }
btc-network-mmdb = { path = "../../crates/btc-network-mmdb" }
btc-network-observability = { path = "../../crates/btc-network-observability" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
