[package]
name = "btc-network-crawler"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
btc-network = { path = "../../crates/btc-network" }
btc-network-mmdb = { path = "../../crates/btc-network-mmdb" }
btc-network-observability = { path = "../../crates/btc-network-observability" }
btc-network-postgres = { path = "../../crates/btc-network-postgres" }
chrono = "0.4.44"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.2"
tracing = "0.1"
