[package]
name = "btc-network-postgres-migrate"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
btc-network-observability = { path = "../../crates/btc-network-observability" }
btc-network-postgres = { path = "../../crates/btc-network-postgres" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
