[package]
name = "btc-network-postgres"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
btc-network = { path = "../btc-network" }
chrono = "0.4.44"
hex = "0.4.3"
sha2 = "0.10"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["rt", "sync"] }

[dev-dependencies]
btc-network-mmdb = { path = "../btc-network-mmdb" }
maxminddb-writer = "0.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
