[package]
name = "btc-network-testkit"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
axum = "0.8"
btc-network-postgres = { path = "../btc-network-postgres" }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx-core = { version = "0.8.6", features = ["chrono", "migrate", "uuid", "_rt-tokio", "_tls-rustls-ring-webpki"] }
sqlx-postgres = { version = "0.8.6", features = ["chrono", "migrate", "uuid"] }
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tokio = { version = "1", features = ["rt", "sync"] }
url = "2"
uuid = { version = "1", features = ["serde"] }
