[package]
name = "btc-network"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
byteorder = "1.5"
sha2 = "0.10"
rand = "0.8"
hex = "0.4.3"
chrono = "0.4.44"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
