[package]
name = "btc-network"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[features]
default = []
openapi = ["dep:utoipa"]

[dependencies]
byteorder = "1.5"
sha2 = "0.10"
getrandom = "0.3"
hex = "0.4.3"
chrono = "0.4.44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
utoipa = { version = "5", features = ["macros"], optional = true }
uuid = { version = "1", features = ["v7"] }
zstd = "0.13"
