[package]
name = "btc-network-desktop"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "btc_network_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
btc-network = { path = "../../../crates/btc-network" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
